--- a/biko_hr/templates/home.html
+++ b/biko_hr/templates/home.html
@@ -62,6 +62,8 @@
                         <li class="nav-item"><a class="nav-link" href="{% url "hr_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
                     {% elif user_type == "organization_staff" %}
                         <li class="nav-item"><a class="nav-link" href="{% url "organization_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
+                    {% elif user_type == "Director" %}
+                        <li class="nav-item"><a class="nav-link" href="{% url "director_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
 {#                    {% else %}#}
 {#                        <li class="nav-item"><a class="nav-link" href="{% url "log-in" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>#}
                     {% endif %}
