--- a/jobrequest/templates/task_request_detail.html
+++ b/jobrequest/templates/task_request_detail.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Talep Detayları</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 40px; }
-        h1 { text-align: center; }
-        table { width: 50%; margin: auto; border-collapse: collapse; }
-        th, td { padding: 10px; border: 1px solid #ddd; text-align: left; }
-        th { background-color: #4CAF50; color: white; }
-        a { display: block; text-align: center; margin-top: 20px; color: #4CAF50; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
-</head>
-<body>
-    <h1>Talep Detayları</h1>
-    <table>
+{% extends 'base.html' %}
+
+{% block title %}Talep Detayları{% endblock %}
+
+{% block content %}
+<h1 class="text-primary">Talep Detayları</h1>
+<div class="table-responsive">
+    <table class="table table-bordered">
         <tr><th>Lokasyon:</th><td>{{ task.location }}</td></tr>
         <tr><th>Organizasyon:</th><td>{{ task.organization }}</td></tr>
         <tr><th>Görev Adı:</th><td>{{ task.position_name }}</td></tr>
@@ -26,7 +17,6 @@
         <tr><th>Kimin Yerine:</th><td>{{ task.replacement_for }}</td></tr>
         {% endif %}
 
-        <!-- Talep Türü İlave Kadro ise "Talep Nedeni" göster -->
         {% if task.position_type == "İlave Kadro" %}
         <tr><th>Talep Nedeni:</th><td>{{ task.request_reason }}</td></tr>
         {% endif %}
@@ -37,20 +27,25 @@
         <tr><th>Deneyim Yılı:</th><td>{{ task.desired_experience_years }}</td></tr>
         <tr><th>Eğitim:</th><td>{{ task.required_education_level }}</td></tr>
         <tr><th>Varsa Özel Nitelikler:</th><td>{{ task.special_requirements }}</td></tr>
+        <tr><th>Durum:</th><td>{{ task.request_status_organization_manager }}</td></tr>
         <tr><th>Oluşturulma Tarihi:</th><td>{{ task.created_at }}</td></tr>
-        <h2>Atanan Adaylar</h2>
-        {% if assigned_candidates %}
-        <ul>
-            {% for candidate in assigned_candidates %}
-                <li>
-                    {{ candidate.name }} {{ candidate.surname }}
-                </li>
-                {% endfor %}
-        </ul>
-        {% else %}
-        <p>Bu iş talebine henüz aday atanmadı.</p>
-        {% endif %}
     </table>
-    <a href="{% url 'task_request_list' %}">← Geri Dön</a>
-</body>
-</html>
+</div>
+
+<h2 class="text-secondary text-center mt-5">Atanan Adaylar</h2>
+<div class="mt-3 text-center">
+    {% if assigned_candidates %}
+    <ul class="list-group w-50 mx-auto">
+        {% for candidate in assigned_candidates %}
+            <li class="list-group-item">
+                {{ candidate.name }} {{ candidate.surname }}
+            </li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p class="text-center">Bu iş talebine henüz aday atanmadı.</p>
+    {% endif %}
+
+
+</div>
+{% endblock %}
