--- a/jobrequest/templates/task_request_list.html
+++ b/jobrequest/templates/task_request_list.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Personel Talep Listesi</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 40px; }
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-        th { background-color: #4CAF50; color: white; }
-        tr:nth-child(even) { background-color: #f2f2f2; }
-        h1 { text-align: center; }
-    </style>
-</head>
-<body>
-    <li><a href="{% url 'create_task_request' %}">Create Job Request</a></li>
-    <h1>Personel Talep Listesi</h1>
-    <table>
+{% extends 'base.html' %}
+
+{% block title %}Personel Talep Listesi{% endblock %}
+
+{% block content %}
+<h1 class="text-primary">Personel Talep Listesi</h1>
+<table class="table table-bordered">
+    <thead>
         <tr>
             <th>Lokasyon</th>
             <th>Organizasyon</th>
@@ -24,9 +15,12 @@
             <th>Çalışma Türü</th>
             <th>Alınacak Kişi Sayısı</th>
             <th>Oluşturulma Tarihi</th>
+            <td>Durum</td>
             <th>Aday Atama</th>
             <th>Detay</th>
         </tr>
+    </thead>
+    <tbody>
         {% for task in tasks %}
         <tr>
             <td>{{ task.location }}</td>
@@ -37,7 +31,6 @@
                 {% elif task.new_position_name %}
                     {{ task.new_position_name }}
                 {% else %}
-                    <!-- Optionally handle the case where both are blank -->
                     No position specified
                 {% endif %}
             </td>
@@ -46,14 +39,15 @@
             <td>{{ task.work_type }}</td>
             <td>{{ task.desired_personnel_count }}</td>
             <td>{{ task.created_at }}</td>
-            
-            <td><a href="{% url 'task_request_detail' task.pk %}">Detay</a></td>
+            <td>{{ task.request_status_organization_manager}}</td>
+            <td><a href="{% url 'assign_candidates' task.pk %}" class="btn btn-warning btn-sm">Aday Atama</a></td>
+            <td><a href="{% url 'task_request_detail' task.pk %}" class="btn btn-info btn-sm">Detay</a></td>
         </tr>
         {% empty %}
         <tr>
-            <td colspan="11">Henüz bir talep eklenmemiş.</td>
+            <td colspan="10" class="text-center">Henüz bir talep eklenmemiş.</td>
         </tr>
         {% endfor %}
-    </table>
-</body>
-</html>
+    </tbody>
+</table>
+{% endblock %}
